endpoint to wake up server; make controllers folder
